<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="4.0dip" >
	
	<TableLayout 
        android:id="@+id/tbl_01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:stretchColumns="0,1,2,3" >
        	        
        	<!-- 按钮 -->
	       <TableRow
		        android:id="@+id/TableRow0"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="2.0dip"  >
	        
	        <Button
		        android:id="@+id/btn_showrealtimedata"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"   
		        android:layout_span="1" 
		        android:padding="2.0dip"    
		        android:text="@string/string_start" />
	
	   		<Button
		        android:id="@+id/btn_hiderealtimedata"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1" 
		        android:layout_span="1"
		        android:padding="2.0dip"
		        android:text="@string/string_stop" />


	   		        
    		</TableRow>
    		
	        <!-- 车辆实时数据流 -->
	        <!-- 第1行 -->
	        <TableRow 
	            android:id="@+id/TableRow1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	            
	            <TextView
		            android:id="@+id/textView1"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"	
		            android:layout_span="4"	            
		            android:gravity="center"
		            android:text="@string/lbl_msg_realtime_listening"
		            android:textSize="20.0sp"
		            android:textStyle="bold" />
	            
	        </TableRow>
	        
	        <!-- 第2行 -->
	        <TableRow 
	            android:id="@+id/TableRow2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"	
	            android:gravity="center_horizontal"            
	            >
	            
	            <TextView
		            android:id="@+id/textView2"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_bat" />
		        <TextView
		            android:id="@+id/txv_bat_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- V" />	            
		  	 </TableRow>
		  	 
		  	<!-- 第3行 -->
			<TableRow 
	            android:id="@+id/TableRow3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"	
	            android:gravity="center_horizontal"             
	            >
		        <TextView
		            android:id="@+id/textView4"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_rpm" />
		
		        <TextView
		            android:id="@+id/txv_rpm_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- rpm" />
		                     
	        </TableRow>
    	
	        <!-- 第4行 -->
	        <TableRow 
	            android:id="@+id/TableRow4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
	            
	            <TextView
		            android:id="@+id/textView6"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_vss" />
		
		        <TextView
		            android:id="@+id/txv_vss_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- km/h" />
			</TableRow>
		   
	        <!-- 第5行 -->
	        <TableRow 
	            android:id="@+id/TableRow5"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        <TextView
		            android:id="@+id/textView8"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_tp" />
		
		        <TextView
		            android:id="@+id/txv_tp_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- %" />
	            
	        </TableRow>
	        
	        <!-- 第6行 -->
	        <TableRow 
	            android:id="@+id/TableRow6"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        
	            <TextView
		            android:id="@+id/textView10"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_lod" />
		
		        <TextView
		            android:id="@+id/txv_lod_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- %" />
			</TableRow>
			
	        <!-- 第7行 -->
	        <TableRow 
	            android:id="@+id/TableRow7"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            > 
		        <TextView
		            android:id="@+id/textView12"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_ect" />
		
		        <TextView
		            android:id="@+id/txv_ect_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- C" />
	            
	        </TableRow>
	        
	        <!-- 第8行 -->
	        <TableRow 
	            android:id="@+id/TableRow8"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
	            
	            <TextView
		            android:id="@+id/textView14"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_mpg" />
		
		        <TextView
		            android:id="@+id/txv_mpg_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- L/h" />
			</TableRow>
			
	        <!-- 第9行 -->
	        <TableRow 
	            android:id="@+id/TableRow9"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        <TextView
		            android:id="@+id/textView16"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_avm" />
		
		        <TextView
		            android:id="@+id/txv_avm_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- L/100km" />
	        </TableRow>
	        
	    	<!--  第10行 -->
	        <TableRow 
	            android:id="@+id/TableRow10"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        
	       		<TextView
		            android:id="@+id/textView18"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_fli" />
		
		        <TextView
		            android:id="@+id/txv_fli_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- %" />
	       </TableRow>
	       
	       <!--  第11行 -->
	       <TableRow 
	            android:id="@+id/TableRow11"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
	          <TextView
		            android:id="@+id/textView86"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_dtn" />
		
		        <TextView
		            android:id="@+id/txv_dtn_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="----" />
		</TableRow>
    </TableLayout>  
</ScrollView>