<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="4.0dip" >
	
	<TableLayout 
        android:id="@+id/tbl_01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:stretchColumns="0,1,2,3" >
        	        
        	<!-- 按钮 -->
	       <TableRow
		        android:id="@+id/TableRow0"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="2.0dip"  >
	        
	        <Button
		        android:id="@+id/btn_showhabits"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"   
		        android:layout_span="1" 
		        android:padding="2.0dip"    
		        android:text="@string/string_start" />
	
	   		<Button
		        android:id="@+id/btn_hidehabits"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1" 
		        android:layout_span="1"
		        android:padding="2.0dip"
		        android:text="@string/string_stop" />


	   		        
    		</TableRow>
    		
	        <!-- 驾驶习惯数据流 -->
	        <!-- 第1行 -->
	        <TableRow 
	            android:id="@+id/TableRow1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	            
	            <TextView
		            android:id="@+id/textView41"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:layout_span="4"
		            android:text="@string/lbl_msg_vihicle_habit"
		            android:textSize="20.0sp"
		            android:textStyle="bold" />
	            
	        </TableRow>
	        
	        <!-- 第2行 -->
	        <TableRow 
	            android:id="@+id/TableRow2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"	
	            android:gravity="center_horizontal"            
	            >
	            
	            <TextView
		            android:id="@+id/textView42"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_tpc" />
		
		        <TextView
		            android:id="@+id/txv_tpc_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- Times" />          
		  	 </TableRow>
		  	 
		  	<!-- 第3行 -->
			<TableRow 
	            android:id="@+id/TableRow3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"	
	            android:gravity="center_horizontal"             
	            >
		        <TextView
		            android:id="@+id/textView44"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_tmt" />
		
		        <TextView
		            android:id="@+id/txv_tmt_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- h" />
		                     
	        </TableRow>
    	
	        <!-- 第4行 -->
	        <TableRow 
	            android:id="@+id/TableRow4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
	            
	             <TextView
		            android:id="@+id/textView46"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_tst" />
		
		        <TextView
		            android:id="@+id/txv_tst_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- h" />
			</TableRow>
		   
	        <!-- 第5行 -->
	        <TableRow 
	            android:id="@+id/TableRow5"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        <TextView
		            android:id="@+id/textView48"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_awt" />
		
		        <TextView
		            android:id="@+id/txv_awt_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- s" />
	            
	        </TableRow>
	        
	        <!-- 第6行 -->
	        <TableRow 
	            android:id="@+id/TableRow6"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        
	             <TextView
		            android:id="@+id/textView50"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_asp" />
		
		        <TextView
		            android:id="@+id/txv_asp_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- km/h" />
			</TableRow>
			
	        <!-- 第7行 -->
	        <TableRow 
	            android:id="@+id/TableRow7"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            > 
		       <TextView
		            android:id="@+id/textView52"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_msp" />
		
		        <TextView
		            android:id="@+id/txv_msp_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- km/h" />
	            
	        </TableRow>
	        
			<!-- 第8行 -->
	        <TableRow 
	            android:id="@+id/TableRow8"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >	        
	        	<TextView
		            android:id="@+id/textView54"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_mrp" />
	        
		        <TextView
		            android:id="@+id/txv_mrp_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- rpm" />
		    </TableRow> 
		    
	        <!-- 第9行 -->
	        <TableRow 
	            android:id="@+id/TableRow9"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
	            
	             <TextView
		            android:id="@+id/textView92"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_tacc" />
		
		        <TextView
		            android:id="@+id/txv_tacc_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- t" />
			</TableRow>
			
	        <!-- 第10行 -->
	        <TableRow 
	            android:id="@+id/TableRow10"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal" 
	            >
		        <TextView
		            android:id="@+id/textView94"
		            style="@style/lbl_msg_style"
		            android:layout_gravity="left"
		            android:text="@string/lbl_field_tdec" />
		
		        <TextView
		            android:id="@+id/txv_tdec_value"
		            style="@style/field_value_style"
		            android:layout_gravity="left"
		            android:text="---- t" />
	        </TableRow>
	        

	 
    </TableLayout>  
</ScrollView>